objects/zealynxsf__Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>zealynxsf__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zealynxsf__From_Field__c</fullName>
        <label>From Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zealynxsf__From_Object__c</fullName>
        <label>From Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zealynxsf__From_Type__c</fullName>
        <label>From Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zealynxsf__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zealynxsf__To_Field__c</fullName>
        <label>To Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zealynxsf__To_Object__c</fullName>
        <label>To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zealynxsf__To_Type__c</fullName>
        <label>To Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mapping</label>
    <listViews>
        <fullName>AdditionalProductDetail</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>zealynxsf__From_Object__c</columns>
        <columns>zealynxsf__From_Field__c</columns>
        <columns>zealynxsf__To_Object__c</columns>
        <columns>zealynxsf__To_Field__c</columns>
        <columns>zealynxsf__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zealynxsf__To_Object__c</field>
            <operation>equals</operation>
            <value>kugo2p__AdditionalProductDetail__c</value>
        </filters>
        <label>AdditionalProductDetail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QuoteLineGroup_to_OrderLineGroup</fullName>
        <columns>MasterLabel</columns>
        <columns>zealynxsf__Inactive__c</columns>
        <columns>zealynxsf__From_Object__c</columns>
        <columns>zealynxsf__From_Field__c</columns>
        <columns>zealynxsf__From_Type__c</columns>
        <columns>zealynxsf__To_Object__c</columns>
        <columns>zealynxsf__To_Field__c</columns>
        <columns>zealynxsf__To_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zealynxsf__From_Object__c</field>
            <operation>equals</operation>
            <value>SBQQ__QuoteLineGroup__c</value>
        </filters>
        <label>QuoteLineGroup to OrderLineGroup</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QuoteLine_to_SalesOrderProductLine</fullName>
        <columns>MasterLabel</columns>
        <columns>zealynxsf__Inactive__c</columns>
        <columns>zealynxsf__From_Object__c</columns>
        <columns>zealynxsf__From_Field__c</columns>
        <columns>zealynxsf__From_Type__c</columns>
        <columns>zealynxsf__To_Object__c</columns>
        <columns>zealynxsf__To_Field__c</columns>
        <columns>zealynxsf__To_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zealynxsf__From_Object__c</field>
            <operation>equals</operation>
            <value>SBQQ__QuoteLine__c</value>
        </filters>
        <filters>
            <field>zealynxsf__To_Object__c</field>
            <operation>equals</operation>
            <value>kugo2p__SalesOrderProductLine__c</value>
        </filters>
        <label>QuoteLine to SalesOrderProductLine</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QuoteLine_to_SalesOrderServiceLine</fullName>
        <columns>MasterLabel</columns>
        <columns>zealynxsf__Inactive__c</columns>
        <columns>zealynxsf__From_Object__c</columns>
        <columns>zealynxsf__From_Field__c</columns>
        <columns>zealynxsf__From_Type__c</columns>
        <columns>zealynxsf__To_Object__c</columns>
        <columns>zealynxsf__To_Field__c</columns>
        <columns>zealynxsf__To_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zealynxsf__From_Object__c</field>
            <operation>equals</operation>
            <value>SBQQ__QuoteLine__c</value>
        </filters>
        <filters>
            <field>zealynxsf__To_Object__c</field>
            <operation>equals</operation>
            <value>kugo2p__SalesOrderServiceLine__c</value>
        </filters>
        <label>QuoteLine to SalesOrderServiceLine</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Quote_to_SalesOrder</fullName>
        <columns>MasterLabel</columns>
        <columns>zealynxsf__Inactive__c</columns>
        <columns>zealynxsf__From_Object__c</columns>
        <columns>zealynxsf__From_Field__c</columns>
        <columns>zealynxsf__From_Type__c</columns>
        <columns>zealynxsf__To_Object__c</columns>
        <columns>zealynxsf__To_Field__c</columns>
        <columns>zealynxsf__To_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zealynxsf__From_Object__c</field>
            <operation>equals</operation>
            <value>SBQQ__Quote__c</value>
        </filters>
        <filters>
            <field>zealynxsf__Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Quote to SalesOrder</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>zealynxsf__All_Mapping_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>zealynxsf__Inactive__c</columns>
        <columns>zealynxsf__From_Object__c</columns>
        <columns>zealynxsf__From_Field__c</columns>
        <columns>zealynxsf__From_Type__c</columns>
        <columns>zealynxsf__To_Object__c</columns>
        <columns>zealynxsf__To_Field__c</columns>
        <columns>zealynxsf__To_Type__c</columns>
        <columns>zealynxsf__Default_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mapping Records</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Mappings</pluralLabel>
</CustomObject>